Refactor sidebar navigation and home content: enhance structure with collapsible sections and submenus, update styles for improved usability and aesthetics.

--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,7 +1,7 @@
 <div class="placeholder-wrapper">
   <!-- Section Copilot -->
   <header class="placeholder-header">
-    <h1>Copilot</h1>
+    <h1>atomeek</h1>
   </header>
   <div class="copilot-section">
     <textarea class="copilot-input" placeholder="Ask Copilot" rows="1" (input)="handleCopilotInput($event)"></textarea>
