--- a/atkm/src/app/features/binance/components/account-snapshot/account-snapshot.component.html
+++ b/atkm/src/app/features/binance/components/account-snapshot/account-snapshot.component.html
@@ -1,9 +1,9 @@
 <div class="placeholder-wrapper">
   <header class="placeholder-header">
-    <h1>Binance Account Snapshot</h1>
+    <h1>Binance Account Global Watchlist</h1>
   </header>
   <div class="placeholder-details">
-    <h2>Account snapshot functionality will be implemented here.</h2>
+    <h2>Binance user's global watchlist</h2>
   </div>
   <div class="feature-content">
     <header class="feature-header">
