--- a/atkm/src/app/shared/components/sidebar-nav/sidebar-nav.component.html
+++ b/atkm/src/app/shared/components/sidebar-nav/sidebar-nav.component.html
@@ -47,7 +47,7 @@
               }
               }
             </svg>
-            {{ item?.label || '' }} {{item.icon}}
+            {{ item?.label || '' }}
           </a>
           } @else {
           <a class="repo-title">
